<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/anasayfaItem"
        android:title="@string/anasayfaLabel"
        android:icon="@drawable/ic_home_24dp"/>
    <item android:id="@+id/kitapIslemlerItem"
        android:title="@string/kitapIslemler"
        android:icon="@drawable/ic_library_books_24dp"/>
    <item android:id="@+id/parametreIslemlerItem"
        android:title="@string/parametreIslemler"
        android:icon="@drawable/ic_settings_applications_24dp"/>
    <item android:id="@+id/profilIslemlerItem"
        android:title="@string/profilIslemler"
        android:icon="@drawable/ic_person_24dp"/>
    <item android:id="@+id/cikisItem"
        android:title="@string/cikisIslem"
        android:icon="@drawable/ic_exit_to_app_24dp"/>
</menu>