<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/loginParent">
    <ScrollView
        style="@style/parent">
        <RelativeLayout
            style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profilImage"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/imageShadowOnline"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/imageShadow"
                    app:civ_shadow_radius="10dp" />

                <TextView
                    android:id="@+id/profilAdSoyad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor"
                    android:elevation="5dp"
                    app:cardCornerRadius="@dimen/loginCardRadius">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/profilKullaniciAd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/profilKullaniciAdi"
                                android:editable="false"
                                style="@style/modifiedEditText"
                                android:maxLines="1"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/profilAdText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/profilAd"
                                style="@style/modifiedEditText"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/profilSoyadText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/profilSoyad"
                                style="@style/modifiedEditText"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/profilEposta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/profilEpostaHint"
                                style="@style/modifiedEditText"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/profilDogumTarih"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusableInTouchMode="false"
                                android:hint="@string/profilDogumTarihi"
                                style="@style/modifiedEditText"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <libs.mjn.fieldset.FieldSetView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="10dp"
                            android:padding="8dp"
                            app:fsv_borderAlpha="0.75"
                            app:fsv_borderColor="@color/colorAccent"
                            app:fsv_borderRadius="12dp"
                            app:fsv_borderWidth="1dp"
                            app:fsv_legend="@string/cinsiyetLabel"
                            app:fsv_legendColor="@color/colorAccent"
                            app:fsv_legendFont="lobster.ttf"
                            app:fsv_legendPosition="left">

                            <RadioGroup
                                android:id="@+id/cinsiyetRadioGroup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/erkekRadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cinsiyetErkekLabel"
                                    android:buttonTint="@color/colorAccent"
                                    android:theme="@style/KutSisRaidoButton" />

                                <RadioButton
                                    android:id="@+id/kadinRadioButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:text="@string/cinsiyetKadinLabel"
                                    android:buttonTint="@color/colorAccent"
                                    android:theme="@style/KutSisRaidoButton" />
                            </RadioGroup>

                        </libs.mjn.fieldset.FieldSetView>



                        <Spinner
                            android:id="@+id/ilgiAlanlariSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            style="@style/spinner_style"/>

                        <CheckBox
                            android:id="@+id/haberdarCheckBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/gelismeHabderdarLabel"
                            android:textStyle="italic"
                            android:buttonTint="@color/colorAccent"
                            android:theme="@style/KutSisCheckBox" />

                        <Button
                            android:id="@+id/profilGuncelleButton"
                            android:text="@string/kaydetLabel"
                            android:background="@drawable/login_button_background"
                            android:textColor="@color/whiteTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
